--- a/client_admin/src/view/dienthoai/dienthoai.css
+++ b/client_admin/src/view/dienthoai/dienthoai.css
@@ -79,3 +79,9 @@ display: flex;
   padding: 10px;
   margin-left: 5px;
 }
+.topnameUser{
+  text-align: right;
+  padding-right: 25px;
+  padding-top: 10px;
+  font-size: 23px;
+}
